# vocabulary

./: README.rst  pyproject.toml  vocabulary.py
